# rusty-raft

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
proto/: raft.proto  rpcserver.proto
src/: command.rs  main.rs  server.rs
src/states/: candidate.rs  follower.rs  leader.rs  mod.rs  states.rs
