[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
rand = "0.8"
tokio = "1.35.1"
tonic = "0.10.2"

[dependencies.uuid]
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    ]
    
[[bin]]
name = "raft-server"
path = "src/server.rs"

[build-dependencies]
tonic-build = "0.10.2"

